# ai-event-processing-platform

./: .env.example  .gitignore  ENGINEERING_GUIDELINES.md  README.md  docker-compose.yml  main.py  pyproject.toml
infra/postgres/: init.sql
services/ai-service/: Dockerfile  conftest.py  pyproject.toml
services/ai-service/app/: config.py  main.py
services/ai-service/app/api/v1/: inference.py
services/ai-service/app/domain/: inference_engine.py  prediction.py
services/ai-service/app/infrastructure/: kafka_worker.py  transformers_engine.py
services/ai-service/app/schemas/: inference_schema.py
services/ai-service/app/services/: inference_service.py
services/ai-service/tests/unit/: test_inference_service.py
services/analytics-service/: pyproject.toml
services/analytics-service/app/: config.py
services/analytics-service/app/domain/: metric.py  metric_repository.py
services/analytics-service/app/infrastructure/: prometheus.py
services/event-service/: Dockerfile  conftest.py  pyproject.toml
services/event-service/app/: config.py  main.py
services/event-service/app/api/v1/: events.py
services/event-service/app/domain/: event.py  event_repository.py
services/event-service/app/infrastructure/: database.py  kafka_producer.py  models.py  postgres_event_repository.py
services/event-service/app/schemas/: event_schema.py
services/event-service/app/services/: event_service.py
services/event-service/tests/unit/: test_event_service.py
services/gateway/: Dockerfile  conftest.py  pyproject.toml
services/gateway/app/: config.py  main.py
services/gateway/app/middleware/: auth.py  correlation.py  rate_limit.py
services/gateway/app/routers/: health.py
services/gateway/tests/: __init__.py
services/gateway/tests/unit/: test_middleware.py
test/: REPORT_CHECKLIST.md  conftest.py  test_connections.py
test/functional/: conftest.py  test_event_service.py  test_inference_service.py
test/middleware/: conftest.py
